# synacor

./: Cargo.toml  README.md
examples/: bad_parse.asm  ex.asm  invalid_number.asm
src/: cli.rs  convert.rs  error.rs  lib.rs  opcodes.rs  vm.rs
tests/: roundtrip.rs
