[package]
name = "synacor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
clap = { version = "4.1.13", features = ["derive"] }
codespan-reporting = "0.11.1"
itertools = "0.10.5"
lazy_static = "1.4.0"
main_error = "0.1.2"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
